--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,10 +41,10 @@ profile = "black"
 use_parentheses = true
 
 [tool.mypy]
-enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
 check_untyped_defs = true
 disallow_any_generics = true
 disallow_untyped_defs = true
+enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
 explicit_package_bases = true
 follow_imports = "silent"
 ignore_missing_imports = true
@@ -87,51 +87,53 @@ mypy = 1
 check_nb = """
 nbqa
 mypy 
-    python_design_patterns/notebooks/*
-    python_design_patterns/python/*
+src/notebooks/*
 """
 check_py = """
 mypy 
-    python_design_patterns/python/*
+src/python/*
 """
 clean = """
-rm -rf .mypy_cache
-       dist
-       ./**/__pycache__
+rm -rf 
+./**/__pycache__/
+.mypy_cache/
+dist/
+src/python/
 """
 export = """
-jupyter nbconvert python_design_patterns/notebooks/*.ipynb 
-    --to         python
-    --output-dir python_design_patterns/python/
+jupyter 
+nbconvert 
+src/notebooks/*.ipynb 
+--to         python
+--output-dir src/python/
 """
 format_nb = """
 nbqa
 black 
-    python_design_patterns/notebooks/*
-    python_design_patterns/python/*
+src/notebooks/*
 """
 format_py = """
 black 
-    python_design_patterns/python/*
+src/python/*
 """
 lint_nb = """
 nbqa
 flake8 
-    python_design_patterns/notebooks/*
+src/notebooks/*
 """
 lint_py = """
 flake8 
-    python_design_patterns/python/*
+src/python/*
 """
 precommit = "pre-commit run --all-files"
 sort_nb = """
 nbqa
 isort 
-    python_design_patterns/notebooks/*
+src/notebooks/*
 """
 sort_py = """
 isort 
-    python_design_patterns/python/*
+src/python/*
 """
 
 [tool.poetry]
@@ -147,26 +149,27 @@ classifiers = [
 description = "Set of notebooks of design patterns written in python"
 documentation = "https://mmmason-github.github.io/python_design_patterns/docs"
 homepage = "https://mmmason-github.github.io/python_design_patterns/home"
-keywords = ["design patterns", "python"]
+include = [
+    { format = "sdist", path = ".editorconfig" },
+    { format = "sdist", path = ".gitignore" },
+    { format = "sdist", path = ".pre-commit-config.yaml" },
+    { format = "sdist", path = ".vscode/" },
+    { format = "sdist", path = "LICENSE.txt" },
+    { format = "sdist", path = "README.md" },
+    { format = "sdist", path = "docs/" },
+    { format = "sdist", path = "pyproject.toml" },
+]
+keywords = ["data structures and algorithms", "python"]
 license = "LICENSE.txt"
 maintainers = ["mmmason <mmmason.github@gmail.com>"]
-name = "python_design_patterns"
-packages = [
-    { format = "sdist", include = ".editorconfig" },
-    { format = "sdist", include = "LICENSE.txt" },
-    { format = "sdist", include = "README.md" },
-    { format = "sdist", include = "docs/docs.html" },
-    { format = "sdist", include = "docs/home.html" },
-    { format = "sdist", include = "poetry.lock" },
-    { format = "sdist", include = "python_design_patterns" },
-    { format = "sdist", include = "requirements.txt" },
-]
+name = "src"
+packages = [{ format = "sdist", include = "src/" }]
 readme = "README.md"
 repository = "https://github.com/mmmason-github/python_design_patterns/"
 version = "0.1.0"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.9,<3.12"
 jupyter-console = "^6.6.3"
 jupyter-server = "^2.4.0"
 jupyter-client = "^8.0.3"
@@ -175,6 +178,7 @@ jupyterlab = "^3.6.1"
 jupyterlab-pygments = "^0.2.2"
 jupyterlab-server = "^2.20.0"
 jupyterlab-widgets = "^3.0.5"
+pandas = "^1.5.3"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1.0"
@@ -186,5 +190,6 @@ pre-commit = "^3.1.1"
 
 [tool.poetry.group.typing.dependencies]
 mypy = "^1.1.1"
+pandas-stubs = "^1.5.3.230304"
 pydantic = "^1.10.6"
 typing-extensions = "^4.5.0"
