--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,10 +3,10 @@ repos:
     rev: v4.4.0
     hooks:
     -   id: check-added-large-files
+        args: ['--maxkb=2000']
     -   id: check-docstring-first
     -   id: check-json
     -   id: check-merge-conflict
-    -   id: check-yaml
     -   id: check-yaml
     -   id: debug-statements
     -   id: end-of-file-fixer
