--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,16 +3,13 @@
         79
     ],
     "files.exclude": {
-        "**.coverage": true,
         "**/.DS_Store": true,
-        "**/.benchmarks/": true,
         "**/.editorconfig": true,
         "**/.git": true,
         "**/.gitignore": true,
         "**/.hg": true,
         "**/.mypy_cache/": true,
         "**/.pre-commit-config.yaml": true,
-        "**/.pytest_cache/": true,
         "**/.svn": true,
         "**/.venv/": true,
         "**/CVS": true,
@@ -21,7 +18,9 @@
         "**/Thumbs.db": true,
         "**/__init__.py": true,
         "**/__pycache__": true,
-        "**/docs": true,
+        "**/build_python.sh": true,
+        "**/dist/": true,
+        "**/docs/": true,
         "**/poetry.lock": true,
         "**/pyproject.toml": true,
         "**/requirements.txt": true
